# OpenPanorama

./: CMakeLists.txt  LICENSE  README.md
source/: CMakeLists.txt
source/CV/: CMakeLists.txt  SIFTDescriptorStrategy.cpp  SIFTDescriptorStrategy.h
source/OpenPanorama/: CMakeLists.txt  DescriptorStrategy.h  HeavyDutyWorker.cpp  HeavyDutyWorker.h  ImageProviderWrapper.cpp  ImageProviderWrapper.hpp  OpenPanorama.cpp  PanoramaImage.cpp  PanoramaImage.hpp  PanoramaImageModel.cpp  PanoramaImageModel.hpp  PanoramaPane.cpp  PanoramaPane.hpp
source/OpenPanorama/qml/: main.qml
